deploy: 56027858fea5b15acd4400a79305645580d6b552

--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/Nasa-image-of-the-day/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="./vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Astronomy Picture of the Day</title>
-    <script type="module" crossorigin src="/Nasa-image-of-the-day/assets/index.36b85030.js"></script>
-    <link rel="stylesheet" href="/Nasa-image-of-the-day/assets/index.302ec9ab.css">
+    <script type="module" crossorigin src="./assets/index.a96e01a7.js"></script>
+    <link rel="stylesheet" href="./assets/index.302ec9ab.css">
   </head>
   <body class="bg-indigo-200">
     <div id="root"></div>
